# Game-of-Life

./: LICENSE  README.md  app.py  patterns.toml  pyproject.toml  setup.py
Game_of_Life_Louis_Bessard_CDOF1.egg-info/: PKG-INFO  SOURCES.txt
game/: __main__.py  cli.py  grid.py  patterns.py  views.py
