[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Game_of_Life-Louis_Bessard-CDOF1"
dynamic = ["version"]
description = "Conway's Game of Life in your terminal"
readme = "README.md"
authors = [{name = "LouSarbe", email = "louis.bessard@edu.devinci.fr"}]
dependencies = [
    "tomli"
]

[project.scripts]
game = "game.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "game.__version__"}